Fix mixed imports and other code issue

--- a/nbs/02_url_structure.ipynb
+++ b/nbs/02_url_structure.ipynb
@@ -160,6 +160,33 @@
    "execution_count": null,
    "id": "2ced4806-fce9-4daa-8552-3ba77da5daf2",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | hide\n",
+    "import os\n",
+    "\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e0c713b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | hide\n",
+    "if os.getcwd().endswith(\"/nbs\"):\n",
+    "    filepath = \"data/apple_url_list.csv\"\n",
+    "else:\n",
+    "    filepath = \"nbs/data/apple_url_list.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a4fe8a7",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -192,56 +219,56 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>https://www.apple.com/ae/shop/accessories/all/accessibility</td>\n",
+       "      <td>https://www.apple.com/ae/shop/accessories/all/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>https://www.apple.com/ae/shop/accessories/all/airtag</td>\n",
+       "      <td>https://www.apple.com/ae/shop/accessories/all/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>https://www.apple.com/ae/shop/accessories/all/beats</td>\n",
+       "      <td>https://www.apple.com/ae/shop/accessories/all/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>https://www.apple.com/ae/shop/accessories/all/beats-featured</td>\n",
+       "      <td>https://www.apple.com/ae/shop/accessories/all/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>https://www.apple.com/ae/shop/accessories/all/cases-protection</td>\n",
+       "      <td>https://www.apple.com/ae/shop/accessories/all/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>https://www.apple.com/ae/shop/accessories/all/creativity</td>\n",
+       "      <td>https://www.apple.com/ae/shop/accessories/all/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>https://www.apple.com/ae/shop/accessories/all/displays-mounts</td>\n",
+       "      <td>https://www.apple.com/ae/shop/accessories/all/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>https://www.apple.com/ae/shop/accessories/all/drones</td>\n",
+       "      <td>https://www.apple.com/ae/shop/accessories/all/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>https://www.apple.com/ae/shop/accessories/all/headphones-speakers</td>\n",
+       "      <td>https://www.apple.com/ae/shop/accessories/all/...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                 url\n",
-       "0                      https://www.apple.com/ae/shop/accessories/all\n",
-       "1        https://www.apple.com/ae/shop/accessories/all/accessibility\n",
-       "2               https://www.apple.com/ae/shop/accessories/all/airtag\n",
-       "3                https://www.apple.com/ae/shop/accessories/all/beats\n",
-       "4       https://www.apple.com/ae/shop/accessories/all/beats-featured\n",
-       "5     https://www.apple.com/ae/shop/accessories/all/cases-protection\n",
-       "6           https://www.apple.com/ae/shop/accessories/all/creativity\n",
-       "7      https://www.apple.com/ae/shop/accessories/all/displays-mounts\n",
-       "8               https://www.apple.com/ae/shop/accessories/all/drones\n",
-       "9  https://www.apple.com/ae/shop/accessories/all/headphones-speakers"
+       "                                                 url\n",
+       "0      https://www.apple.com/ae/shop/accessories/all\n",
+       "1  https://www.apple.com/ae/shop/accessories/all/...\n",
+       "2  https://www.apple.com/ae/shop/accessories/all/...\n",
+       "3  https://www.apple.com/ae/shop/accessories/all/...\n",
+       "4  https://www.apple.com/ae/shop/accessories/all/...\n",
+       "5  https://www.apple.com/ae/shop/accessories/all/...\n",
+       "6  https://www.apple.com/ae/shop/accessories/all/...\n",
+       "7  https://www.apple.com/ae/shop/accessories/all/...\n",
+       "8  https://www.apple.com/ae/shop/accessories/all/...\n",
+       "9  https://www.apple.com/ae/shop/accessories/all/..."
       ]
      },
      "execution_count": null,
@@ -250,17 +277,6 @@
     }
    ],
    "source": [
-    "# | echo: true\n",
-    "# | code-fold: true\n",
-    "import os\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "if os.getcwd().endswith(\"/nbs\"):\n",
-    "    filepath = \"data/apple_url_list.csv\"\n",
-    "else:\n",
-    "    filepath = \"nbs/data/apple_url_list.csv\"\n",
-    "\n",
     "apple = pd.read_csv(filepath)\n",
     "apple.head(10)"
    ]
