--- a/nbs/02_url_structure_slides.ipynb
+++ b/nbs/02_url_structure_slides.ipynb
@@ -51,13 +51,48 @@
    "id": "fce8fc5a-f747-42f5-a0a7-13a252586f78",
    "metadata": {},
    "source": [
-    "## Read a list of URLs from a text/CSV file {.smaller}"
+    "## Read a list of URLs from a text/CSV file {.smaller}\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "import adviz\n",
+    "import pandas as pd\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2ced4806-fce9-4daa-8552-3ba77da5daf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | hide\n",
+    "import os\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "import adviz\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77092fe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | hide\n",
+    "if os.getcwd().endswith(\"/nbs\"):\n",
+    "    filepath = \"data/apple_url_list.csv\"\n",
+    "else:\n",
+    "    filepath = \"nbs/data/apple_url_list.csv\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72497b40",
    "metadata": {},
    "outputs": [
     {
@@ -149,18 +184,6 @@
     }
    ],
    "source": [
-    "# | echo: true\n",
-    "# | code-fold: true\n",
-    "import os\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "import adviz\n",
-    "\n",
-    "if os.getcwd().endswith(\"/nbs\"):\n",
-    "    filepath = \"data/apple_url_list.csv\"\n",
-    "else:\n",
-    "    filepath = \"nbs/data/apple_url_list.csv\"\n",
     "apple = pd.read_csv(filepath)\n",
     "apple.head(10)"
    ]
