Fix mixed import cells

--- a/nbs/04_flag.ipynb
+++ b/nbs/04_flag.ipynb
@@ -1215,9 +1215,20 @@
    "outputs": [],
    "source": [
     "# | echo: false\n",
-    "from IPython.display import display_html as html, display_markdown as md\n",
     "from functools import partial\n",
     "\n",
+    "from IPython.display import display_html as html\n",
+    "from IPython.display import display_markdown as md\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b52b702f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | echo: false\n",
     "html = partial(html, raw=True)\n",
     "md = partial(md, raw=True)"
    ]
@@ -1721,6 +1732,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "46ce65f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | hide\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a24df171",
    "metadata": {},
    "outputs": [
@@ -1761,7 +1783,7 @@
    ],
    "source": [
     "# | code-fold: true\n",
-    "import numpy as np\n",
+    "\n",
     "\n",
     "population = pd.read_html(\n",
     "    \"https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population\"\n",
@@ -1829,6 +1851,9 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
